[package]
name = "spamfighter"
version = "0.0.1"
authors = [ "Frankie Robertson <frankie@robertson.name>" ]
#build = "build.rs"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
bincode = "0.9.2"
itertools = "0.6.0"
ordered-float = "0.5.0"
seahash = "3.0.5"
rand = "0.3"
arrayvec = {version = "0.4.6", features = ["serde-1"]}
