[package]
name = "spamfighter"
version = "0.0.1"
authors = [ "Frankie Robertson <frankie@robertson.name>" ]
#build = "build.rs"

[dependencies]
csv = "1.0.0-beta.5"
serde = "1.0"
serde_derive = "1.0"
bincode = "0.9.2"
itertools = "0.6.0"
ordered-float = "0.5.0"
seahash = "3.0.5"
rand = "0.3"
timer = "0.2.0"
num = "0.1.41"
arrayvec = {version = "0.4.6", features = ["serde-1"]}
